add project name to links and headlines